syntax = "proto3";

package grpc;

option go_package = "github.com/v1c70r-dev/Laboratorio1Distribuidos/proto";

message Message {
    string body = 1;
}

message Contencion {
    enum contencionStatus{
        LISTO = 0;
        NOLISTO = 1;
    }
    contencionStatus status = 2;
    string body = 3;
}

message Escuadron{
    bool equipo1 = 1;
    bool equipo2 = 2;
}

message EscuadronUsar{
    string equipox = 1;
}

service MessageService {
    rpc Intercambio (Message) returns (Message);
    rpc ContencionStatus (Message) returns (Contencion);
    rpc CheckDispEscuadron (Escuadron) returns (EscuadronUsar);
}

